--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -6,10 +6,11 @@
     <title>Chat Rooms</title>
 </head>
 <body>
-    What chat room would you like to enter?<br>
-    <input id="room-name-input" type="text" size="100"><br>
+    <center><br><br><br><br>
+    What chat room would you like to enter?<br><br>
+    <input id="room-name-input" type="text" size="100"><br><br>
     <input id="room-name-submit" type="button" value="Enter">
-
+    </center>
     <script>
         document.querySelector('#room-name-input').focus();
         document.querySelector('#room-name-input').onkeyup = function(e) {
